<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>t3_control</name>
  <version>1.0.0</version>
  <description>
    ROS turtlebot3 control.
  </description>
  <license>BSD</license>
  <author email="wruser@windriver.com">wruser</author>
  <author>wruser</author>
  <maintainer email="wruser@windriver.com">wruser</maintainer>
  <url type="website">http://wiki.ros.org/</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml</depend>
  <depend>turtlebot3_node</depend>
  <depend>turtlebot3_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
